crates/loxide_interpreter/tests/snapshots/integration@operator__negate_nonnum.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
snapshot_kind: text
---
-"s"; // expect runtime error: Operand must be a number.


>>>>> Error Section <<<<<

  × Invalid unary operand, expected: number
   ╭────
 1 │ -"s"; // expect runtime error: Operand must be a number.
   ·  ─┬─
   ·   ╰── expect a number type here
   ╰────
